--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,8 @@
 @import 'elements/buttons';
 @import 'elements/transitions';
 
+// import 'bootstrap/dist/css/bootstrap.css'
+@import '~bootstrap-vue/dist/bootstrap-vue.css';
+@import '~vuesax/dist/vuesax.css';
+
 @import 'biocarare';
