--- a/resources/sass/biocarare.scss
+++ b/resources/sass/biocarare.scss
@@ -108,6 +108,14 @@
   padding: 5px 7px 5px 7px;
 }
 
+.btn-eliminar{
+  border: none;
+  border-radius: 3px;
+  background-color: darkred;
+  color: white;
+  padding: 5px 7px 5px 7px;
+}
+
 .btn-cancelar{
   border: 1px solid darkred;
   border-radius: 5px;
