--- a/resources/sass/biocarare.scss
+++ b/resources/sass/biocarare.scss
@@ -23,6 +23,34 @@
   font-size: 40px
 }
 
+.fw-100{
+  font-weight: 100;
+}
+.fw-200{
+  font-weight: 200;
+}
+.fw-300{
+  font-weight: 300;
+}
+.fw-400{
+  font-weight: 400;
+}
+.fw-500{
+  font-weight: 500;
+}
+.fw-600{
+  font-weight: 600;
+}
+.fw-700{
+  font-weight: 700;
+}
+.fw-800{
+  font-weight: 800;
+}
+.fw-900{
+  font-weight: 900;
+}
+
 .boton-editar{
   border: 1px solid lightgray;
   border-radius: 3px;
